# Sampling-CPP

./: .gitignore  Bootstrap.cpp  Bootstrap.h  CMakeLists.txt  CrossValidation.cpp  CrossValidation.h  KFoldCrossValidation.cpp  KFoldCrossValidation.h  README.md  StratifiedKFoldCrossValidation.cpp  StratifiedKFoldCrossValidation.h  conanfile.py
Test/: BootstrapTest.cpp  KFoldCrossValidationTest.cpp  StratifiedKFoldCrossValidationTest.cpp
src/: Bootstrap.h  CMakeLists.txt  CrossValidation.h  KFoldCrossValidation.h  StratifiedKFoldCrossValidation.h
